<resources>
    <!-- App info -->
    <string name="app_name">Railway Guider</string>
    <string name="logo_name">Smart your train</string>
    <string name="slogan_name">We will help you to get your train!</string>
    <string name="powered_by">©dileepabandara.dev</string>

    <!-- Drawer Menu open close drawers-->
    <string name="drawerOpen">Open navigation drawer</string>
    <string name="drawerClose">Close navigation drawer</string>

    <!-- All buttons-->
    <string name="btn_view">View</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_search">Search</string>
    <string name="btn_update">Update</string>
    <string name="btn_send_card">Send Cards</string>
    <string name="btn_use_card">Use Cards</string>
    <string name="btn_ok">OK</string>
    <string name="btn_book">Book</string>
    <string name="btn_go_back">Go Back</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_get_ticket">Get Ticket</string>
    <string name="btn_share">Share</string>
    <string name="btn_add">Add</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_signup">SIGN UP</string>

    <!-- Login Sign Up titles -->
    <string name="login_welcome">Welcome to Railway Guider</string>
    <string name="login">LOGIN to continue</string>
    <string name="sign_up">SIGN UP to continue</string>

    <!-- Dashboard activity titles -->
    <string name="dash_schedule">Find</string>
    <string name="dash_book">Bookings</string>
    <string name="dash_location">Location</string>
    <string name="dash_account">Account</string>
    <string name="dash_gift">Gifts</string>
    <string name="dash_readingWall">Reading</string>
    <string name="dash_payment">Payments</string>
    <string name="dash_scan">QR Code</string>


    <!-- Dashboard recycler titles -->
    <string name="railway_news">Good Railway Transport</string>
    <string name="trains_in_srilanka">Popular Trains in Sri Lanka</string>
    <string name="dash_about">About</string>
    <string name="view_more">More</string>


    <!-- Dashboard trains recycler -->
    <string name="train1_name">Train 1</string>
    <string name="train1_desc">Sri lankan trains have their own beautiful female names.</string>


    <!-- Dashboard about recycler -->
    <string name="about">Tips</string>
    <string name="about_customer">Customer Service</string>
    <string name="about_customer_desc">dagfyusdghsodfhiortsAirpsdagfyusdghsodfhiortsAirpsdagfyusdghsodfhiorts.Airpsdagfyusdghsodfhi</string>
    <string name="about_railway_map">Railway Map</string>
    <string name="about_history">History</string>
    <string name="about_emergency">Emergency</string>

    <!-- Activity headers -->
    <string name="activity_schedule">Train Schedule</string>
    <string name="activity_books">Booked Trains</string>
    <string name="activity_location">Train Location</string>
    <string name="activity_ticket">Tickets</string>
    <string name="activity_gift">Gifts</string>
    <string name="activity_account">Account</string>
    <string name="activity_logout">Logout</string>
    <string name="activity_payment">Payments</string>
    <string name="activity_readingWall">Reading</string>
    <string name="activity_scan">QR Scan</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_online_support">Customer Care</string>
    <string name="activity_share_app">Share App</string>
    <string name="activity_about_us">About</string>

    <!-- Activity Scan -->
    <string name="scan_desc">Scan Railway Guider QR codes and claim rewards and win free tickets</string>

    <!-- Activity Share App -->
    <string name="share_desc">Share the app and earn gift cards</string>
    <string name="share_content_desc">ShareIcon</string>
    <string name="share_content_desc2">SharePic</string>

    <!-- Activity Settings -->
    <string name="settings_language">Current Language English</string>
    <string name="settings_notifications">Notifications On</string>
    <string name="settings_darkMode">Dark Mode</string>
    <string name="settings_content_descIcon">SettingsIcon</string>
    <string name="settings_content_descPic">SettingsPic</string>

    <!-- Activity Account -->
    <string name="account_name">Name</string>
    <string name="account_email">Email</string>
    <string name="account_mobile">Mobile</string>
    <string name="account_dob">DOB</string>
    <string name="account_bank">Bank account</string>
    <string name="account_name_hint">Your name here</string>
    <string name="account_email_hint">Your email here</string>
    <string name="account_mobile_hint">Your mobile here</string>
    <string name="account_dob_hint">Your date of birth here</string>
    <string name="account_bank_hint">Your bank details here</string>

    <!-- Activity Online Support -->
    <string name="online_title">Have you got any issues?</string>
    <string name="online_call">Call us +9471*********</string>
    <string name="online_text">Text us +9471*********</string>
    <string name="online_web">Visit website </string>

    <!-- Activity Payment -->
    <string name="payment_history">Follow The Payment Guide</string>

    <!-- Activity Gifts -->
    <string name="gift_about">Hey! We thankful for you to use this service. So we give you Gift Cards for using our app.</string>
    <string name="gift_about2">Your total cards = 2 Cards</string>

    <!-- Activity TrainLocation -->
    <string name="location_title">Enter Ticket ID</string>
    <string name="location_titleHInt">Enter ticket ID</string>

    <!-- Month Year Picker -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

</resources>
