<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightWhite"
    tools:context="dev.dileepabandara.railwayguider.User.RailwayGuiderGifts">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12sp"
            android:layout_marginTop="12sp"
            android:src="@drawable/icon_back" />

        <ImageView
            android:id="@+id/imgHome"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/icon_home" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-black"
            android:text="Gifts Cards"
            android:textColor="@color/font_colorDark"
            android:textSize="22sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="329dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/font_color"
        android:text="@string/gift_about"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/gift_about2"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/font_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="247dp"
        android:layout_height="196dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/activity_gifts_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView23">

        <Button
            android:id="@+id/searchCard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/design_button"
            android:fontFamily="sans-serif-medium"
            android:text="Search Card"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/design_button3"
            android:fontFamily="sans-serif-medium"
            android:text="@string/btn_send_card"
            android:onClick="onClickSendGiftCards"
            android:textAllCaps="false"
            android:textColor="@color/font_colorDark"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>